# aedb-backend

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.debug.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt
app/: const.py  main.py
app/admin/: admin.py
app/cloud/: session.py
app/core/: config.py
app/data/drivers/: drivers.json
app/data/manuals/: categories.json  groups.json  manuals.json
app/data/storage/: storage.json
app/database/: session.py
app/middlewares/: docs_blocker.py
app/models/: api.py  auth.py  base.py  converters.py  manuals.py  posts.py  speed.py  storage.py
app/routers/: __init__.py  api.py  auth.py  main.py  manuals.py
app/schemas/: api.py  converters.py  manuals.py  posts.py  sensors.py  speed.py  storage.py
app/services/: api.py  auth.py  base.py  converters.py  files.py  manuals.py  posts.py  s3.py
app/templates/: base.html  es.html  index.html  manuals.html
app/utils/: exceljson.py  manuals.py
migrations/: env.py
migrations/versions/: 1dda414fe94b_initial_migration.py  2ce5e439764d_initial_migration.py  2e8c19e19452_initial_migration.py  2efa61352af5_initial_migration.py  3c632ea3a75d_create_users_and_posts_tables.py  42f44dba91ed_initial_migration.py  4afa20a7dbd2_initial_migration.py  4e36b8be8dde_add_auth_and_posts_models.py  6415bf4f5f14_create_users_and_posts_tables.py  88fbdf51c1c0_initial_migration.py  904adf79a351_add_converter_tables.py  9f6e6d5b3100_add_menu_items.py  ac9cd4f97c8d_remove_cover.py  ad8175353144_initial_migration.py  b0296817b493_initial_migration.py  b277795f48aa_initial_migration.py  f54133a8cb10_add_users_and_posts.py
(+16 files in other folders)
