[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Mike <34812500+mikey-semy@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.114.1"}
alembic = "^1.13.2"
pydantic = "^2.9.1"
pydantic-settings = "^2.5.2"
uvicorn = "^0.30.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
