[tool.poetry]
name = "work-aedb"
version = "0.1.0"
description = ""
authors = ["MikhailTo <toshkin.mikhail@yandex.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.5"
SQLAlchemy = "^2.0.36"
aioboto3 = "^13.2.0"
aiosqlite = "^0.20.0"
alembic = "^1.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
