[tool.poetry]
name = "work-aedb"
version = "0.1.0"
description = ""
authors = ["MikhailTo <toshkin.mikhail@yandex.ru>"]
readme = "README.md"
package-mode = false

[virtualenvs]
in-project = true

[tool.poetry.dependencies]
python = "^3.12.3"
fastapi = "^0.115.5"
SQLAlchemy = "^2.0.36"
aioboto3 = "^13.2.0"
aiosqlite = "^0.20.0"
alembic = "^1.14.0"
uvicorn = "^0.32.1"
jinja2 = "^3.1.4"
pydantic-settings = "^2.6.1"
pyjwt = "^2.10.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = "^1.7.4"
loguru = "^0.7.2"
python-multipart = "^0.0.17"
pandas = "^2.2.3"
six = "^1.16.0"
asyncpg = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
